--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,67 +1,65 @@
-name: Build AmneziaWG OpenWrt Packages
+name: Build AmneziAWG OpenWrt Packages
 
 on:
-  workflow_dispatch:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-
-env:
-  REPO_URL: https://github.com/amnezia-vpn/amneziawg-openwrt
-  SDK_URL: https://downloads.openwrt.org/releases/24.10.2/targets/rockchip/armv8/openwrt-sdk-24.10.2-rockchip-armv8_gcc-13.3.0_musl.Linux-x86_64.tar.zst
-  SDK_FILE: openwrt-sdk.tar.zst
-  SDK_DIR: openwrt-sdk-24.10.2-rockchip-armv8
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-22.04
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-    - name: Setup Build Environment
+    - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential ccache ecj fastjar file g++ gawk \
-        gettext git java-propose-classpath libelf-dev libncurses5-dev \
-        libncursesw5-dev libssl-dev python3 python3-distutils python3-setuptools \
-        python3-dev rsync unzip wget xsltproc zlib1g-dev zstd
-        
-    - name: Download and Extract SDK
+        sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
+          gettext git libncurses-dev libssl-dev python3-distutils rsync unzip zlib1g-dev \
+          file wget python3 python3-pip
+
+    - name: Download OpenWrt SDK
       run: |
-        wget -O $SDK_FILE $SDK_URL
-        mkdir -p $SDK_DIR
-        tar -I zstd -xf $SDK_FILE -C .
-        
-    - name: Clone AmneziaWG Repository
+        wget https://downloads.openwrt.org/releases/24.10.2/targets/rockchip/armv8/openwrt-sdk-24.10.2-rockchip-armv8_gcc-13.3.0_musl.Linux-x86_64.tar.xz
+        tar xf openwrt-sdk-24.10.2-rockchip-armv8_gcc-13.3.0_musl.Linux-x86_64.tar.xz
+        mv openwrt-sdk-24.10.2-rockchip-armv8_gcc-13.3.0_musl.Linux-x86_64 sdk
+
+    - name: Update Feeds
       run: |
-        git clone $REPO_URL amneziawg
-        
-    - name: Setup SDK Configuration
-      run: |
-        cd $SDK_DIR
-        # Create feeds.conf
-        echo "src-link amneziawg $GITHUB_WORKSPACE/amneziawg" >> feeds.conf
-        # Update & Install feeds
+        cd sdk
+        echo "src-git base https://git.openwrt.org/openwrt/openwrt.git^024e2a2" > feeds.conf
+        echo "src-git-full packages https://git.openwrt.org/feed/packages.git^591867a" >> feeds.conf
+        echo "src-git-full luci https://git.openwrt.org/project/luci.git^f75f6c2" >> feeds.conf
+        echo "src-git-full routing https://git.openwrt.org/feed/routing.git^2f7428f" >> feeds.conf
+        echo "src-git-full telephony https://git.openwrt.org/feed/telephony.git^858e1a6" >> feeds.conf
         ./scripts/feeds update -a
         ./scripts/feeds install -a
-        # Configure SDK
-        cat > .config <<EOF
+
+    - name: Clone AmneziAWG
+      run: |
+        cd sdk/package
+        git clone https://github.com/amnezia-vpn/amneziawg-openwrt.git
+        
+    - name: Configure Build
+      run: |
+        cd sdk
+        cat > .config <<'EOF'
+        CONFIG_ALL=y
         CONFIG_PACKAGE_amneziawg=y
         CONFIG_PACKAGE_amneziawg-tools=y
         EOF
         make defconfig
-        
+
     - name: Build Packages
       run: |
-        cd $SDK_DIR
-        make package/amneziawg/{clean,compile} V=s
-        make package/amneziawg-tools/{clean,compile} V=s
-        
+        cd sdk
+        make package/amneziawg-openwrt/compile -j$(nproc) V=s
+
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: amneziawg-packages
-        path: ${{ github.workspace }}/${{ env.SDK_DIR }}/bin/packages/*/amneziawg/
+        path: sdk/bin/packages/*/base/amneziawg*.ipk
