--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,11 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+env:
+  SDK_URL: https://downloads.openwrt.org/releases/24.10.2/targets/rockchip/armv8/openwrt-sdk-24.10.2-rockchip-armv8_gcc-13.3.0_musl.Linux-x86_64.tar.zst
+  SDK_FILE: openwrt-sdk.tar.zst
+  SDK_DIR: openwrt-sdk-24.10.2-rockchip-armv8
+
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -18,18 +23,18 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
-          gettext git libncurses-dev libssl-dev python3-distutils rsync unzip zlib1g-dev \
-          file wget python3 python3-pip
+          gettext git libncurses-dev libssl-dev python3-distutils-extra python3-setuptools rsync \
+          unzip zlib1g-dev file wget python3 python3-pip zstd
 
-    - name: Download OpenWrt SDK
+    - name: Download and Extract OpenWrt SDK
       run: |
-        wget https://downloads.openwrt.org/releases/24.10.2/targets/rockchip/armv8/openwrt-sdk-24.10.2-rockchip-armv8_gcc-13.3.0_musl.Linux-x86_64.tar.xz
-        tar xf openwrt-sdk-24.10.2-rockchip-armv8_gcc-13.3.0_musl.Linux-x86_64.tar.xz
-        mv openwrt-sdk-24.10.2-rockchip-armv8_gcc-13.3.0_musl.Linux-x86_64 sdk
-
+        wget -O $SDK_FILE $SDK_URL
+        mkdir -p $SDK_DIR
+        tar -I zstd -xf $SDK_FILE
+        
     - name: Update Feeds
       run: |
-        cd sdk
+        cd $SDK_DIR
         echo "src-git base https://git.openwrt.org/openwrt/openwrt.git^024e2a2" > feeds.conf
         echo "src-git-full packages https://git.openwrt.org/feed/packages.git^591867a" >> feeds.conf
         echo "src-git-full luci https://git.openwrt.org/project/luci.git^f75f6c2" >> feeds.conf
@@ -40,26 +45,39 @@ jobs:
 
     - name: Clone AmneziAWG
       run: |
-        cd sdk/package
-        git clone https://github.com/amnezia-vpn/amneziawg-openwrt.git
+        cd $SDK_DIR/package
+        git clone https://github.com/amnezia-vpn/amneziawg-openwrt.git amneziawg
         
     - name: Configure Build
       run: |
-        cd sdk
+        cd $SDK_DIR
         cat > .config <<'EOF'
         CONFIG_ALL=y
         CONFIG_PACKAGE_amneziawg=y
         CONFIG_PACKAGE_amneziawg-tools=y
+        CONFIG_PACKAGE_kmod-amneziawg=y
         EOF
         make defconfig
 
     - name: Build Packages
       run: |
-        cd sdk
-        make package/amneziawg-openwrt/compile -j$(nproc) V=s
+        cd $SDK_DIR
+        make package/amneziawg/{clean,compile} V=s
+        make package/amneziawg-tools/{clean,compile} V=s
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: amneziawg-packages
-        path: sdk/bin/packages/*/base/amneziawg*.ipk
+        path: ${{ env.SDK_DIR }}/bin/packages/*/base/amneziawg*.ipk
+        retention-days: 5
+
+    - name: Upload Build Logs
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-logs
+        path: |
+          ${{ env.SDK_DIR }}/logs/
+          ${{ env.SDK_DIR }}/.config
+        retention-days: 5
