--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,49 +17,48 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential clang flex bison g++ gawk \
-          gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
-          python3-distutils-extra python3-setuptools rsync unzip zlib1g-dev \
-          file wget zstd
+        sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
+          gettext git libncurses-dev libssl-dev python3-distutils rsync unzip zlib1g-dev \
+          file wget python3 python3-pip zstd
 
-    - name: Download and Setup SDK
+    - name: Download and Extract SDK
       run: |
         wget -O $SDK_FILE $SDK_URL
-        mkdir -p $SDK_DIR
         tar -I zstd -xf $SDK_FILE
-        mv openwrt-sdk-* $SDK_DIR
-
-    - name: Setup Build Environment
+        
+    - name: Setup SDK
       run: |
         cd $SDK_DIR
-        # Create feeds.conf
-        cat > feeds.conf <<EOF
-        src-git base https://git.openwrt.org/openwrt/openwrt.git
-        src-git packages https://git.openwrt.org/feed/packages.git
-        src-git luci https://git.openwrt.org/project/luci.git
-        src-git routing https://git.openwrt.org/feed/routing.git
-        src-git telephony https://git.openwrt.org/feed/telephony.git
-        EOF
+        # Update feeds.conf
+        echo "src-git-full packages https://git.openwrt.org/feed/packages.git" > feeds.conf.default
+        echo "src-git-full luci https://git.openwrt.org/project/luci.git" >> feeds.conf.default
+        echo "src-git-full routing https://git.openwrt.org/feed/routing.git" >> feeds.conf.default
+        echo "src-git-full telephony https://git.openwrt.org/feed/telephony.git" >> feeds.conf.default
+        # Add amneziawg feed
+        echo "src-link amneziawg $GITHUB_WORKSPACE/amneziawg" >> feeds.conf.default
         
-        # Update feeds
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a
-
     - name: Clone AmneziAWG
       run: |
-        cd $SDK_DIR/package
         git clone https://github.com/amnezia-vpn/amneziawg-openwrt.git amneziawg
+
+    - name: Update and Install Feeds
+      run: |
+        cd $SDK_DIR
+        ./scripts/feeds update -a
+        ./scripts/feeds install -a
         
     - name: Configure Build
       run: |
         cd $SDK_DIR
+        # Configure for amneziawg packages
         cat > .config <<'EOF'
-        CONFIG_ALL_NONSHARED=y
+        CONFIG_ALL=y
         CONFIG_PACKAGE_amneziawg=y
         CONFIG_PACKAGE_amneziawg-tools=y
         CONFIG_PACKAGE_kmod-amneziawg=y
@@ -72,17 +71,12 @@ jobs:
         make package/amneziawg/{clean,compile} V=s
         make package/amneziawg-tools/{clean,compile} V=s
 
-    - name: Package Artifacts
-      run: |
-        cd $SDK_DIR/bin/packages/*
-        find . -name "amneziawg*.ipk" -exec cp {} $GITHUB_WORKSPACE/ \;
-
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: amneziawg-packages
-        path: amneziawg*.ipk
-        retention-days: 5
+        path: ${{ env.SDK_DIR }}/bin/packages/**/amneziawg*
+        retention-days: 7
 
     - name: Upload Build Logs on Failure
       if: failure()
@@ -92,4 +86,4 @@ jobs:
         path: |
           ${{ env.SDK_DIR }}/logs/
           ${{ env.SDK_DIR }}/.config
-        retention-days: 1
+        retention-days: 7
