--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
       id: release_tag
       run: |
         release_tag="FriendlyWrt-$(date +%Y-%m-%d)"
-        echo "##[set-output name=release_tag;]$release_tag"
+        echo "release_tag=$release_tag" >> $GITHUB_OUTPUT
 
     - name: Create empty release
       id: release
@@ -43,6 +43,31 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: '1.24.x'
+
+    # РЕШЕНИЕ 1: Установка системного LLVM
+    - name: Install system LLVM
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y llvm-15-dev libllvm15 llvm-15 llvm-15-runtime
+        # Создаем симлинки для совместимости
+        sudo ln -sf /usr/bin/llvm-config-15 /usr/bin/llvm-config
+        echo "LLVM_SYS_150_PREFIX=/usr/lib/llvm-15" >> $GITHUB_ENV
+
+    # РЕШЕНИЕ 2: Кэширование Rust и LLVM сборки
+    - name: Cache Rust toolchain and LLVM
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cargo/registry
+          ~/.cargo/git
+          ~/.rustup
+          project/friendlywrt/build_dir/host/llvm*
+          project/friendlywrt/build_dir/host/rustc*
+          project/friendlywrt/staging_dir/host/bin/rustc
+          project/friendlywrt/staging_dir/host/lib/rustlib
+        key: rust-llvm-cache-${{ runner.os }}-${{ hashFiles('**/Cargo.lock', '**/rust.mk') }}
+        restore-keys: |
+          rust-llvm-cache-${{ runner.os }}-
 
     - name: Initialization environment
       env:
@@ -85,6 +110,69 @@ jobs:
         source ../scripts/add_packages.sh
         source ../scripts/custome_config.sh
 
+    # РЕШЕНИЕ 3: Комбинированный подход для исправления Rust
+    - name: Fix Rust compilation issues (Multi-approach)
+      run: |
+        cd project/friendlywrt
+
+        # Подход 1: Обновляем версию Rust в feeds до более новой
+        if [ -f feeds/packages/lang/rust/Makefile ]; then
+          # Попытаемся найти более новую стабильную версию Rust
+          sed -i 's/PKG_VERSION:=1.85.0/PKG_VERSION:=1.82.0/g' feeds/packages/lang/rust/Makefile 2>/dev/null || true
+          sed -i 's/rust-1.85.0-src/rust-1.82.0-src/g' feeds/packages/lang/rust/Makefile 2>/dev/null || true
+        fi
+
+        # Подход 2: Настройка для использования системного LLVM
+        export LLVM_CONFIG="/usr/bin/llvm-config-15"
+        export LIBCLANG_PATH="/usr/lib/llvm-15/lib"
+        
+        # Подход 3: Создание config.toml для Rust с правильными настройками
+        find . -path "*/rust-*/config.example.toml" | while read config_template; do
+          config_dir=$(dirname "$config_template")
+          cat > "$config_dir/config.toml" << EOF
+        [llvm]
+        download-ci-llvm = false
+        use-libcxx = false
+        link-shared = true
+        targets = "AArch64;ARM;X86"
+
+        [build]
+        extended = true
+        tools = ["cargo", "clippy", "rustfmt", "rust-analyzer"]
+        
+        [target.aarch64-unknown-linux-musl]
+        llvm-config = "/usr/bin/llvm-config-15"
+
+        [target.x86_64-unknown-linux-gnu]
+        llvm-config = "/usr/bin/llvm-config-15"
+        EOF
+        done
+
+        # Подход 4: Патч для принудительного использования системного LLVM
+        find . -name "rust.mk" -o -name "Makefile" | grep -E "(rust|lang)" | while read makefile; do
+          if grep -q "rustc" "$makefile"; then
+            # Добавляем флаги для использования системного LLVM
+            sed -i '/CONFIGURE_ARGS/a\\t--enable-llvm-link-shared \\' "$makefile" 2>/dev/null || true
+            sed -i '/CONFIGURE_ARGS/a\\t--llvm-root=/usr/lib/llvm-15 \\' "$makefile" 2>/dev/null || true
+          fi
+        done
+
+        # Подход 5: Создание локального патча для feeds
+        mkdir -p feeds/packages/lang/rust/patches
+        cat > feeds/packages/lang/rust/patches/100-use-system-llvm.patch << 'EOF'
+        --- a/config.example.toml
+        +++ b/config.example.toml
+        @@ -1,6 +1,12 @@
+        +[llvm]
+        +download-ci-llvm = false
+        +link-shared = true
+        +use-libcxx = false
+        +
+         # Sample TOML configuration file for building Rust.
+         #
+         # To configure rustbuild, copy this file to the directory from which you
+        EOF
+
     - name: Prepare dot config and feeds
       run: |
         cd project
@@ -104,19 +192,49 @@ jobs:
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
-    - name: Compile friendlyWrt
+    # РЕШЕНИЕ 4: Сборка с расширенным таймаутом и отладкой
+    - name: Compile friendlyWrt with enhanced error handling
       id: compile
       continue-on-error: true
+      timeout-minutes: 240  # 4 часа для сборки LLVM
       run: |
         cd project/friendlywrt
-        make -j$(nproc) || make -j1 V=s
-        echo $?
+        
+        # Установка переменных среды для Rust
+        export RUST_BACKTRACE=1
+        export LLVM_SYS_150_PREFIX=/usr/lib/llvm-15
+        export LIBCLANG_PATH=/usr/lib/llvm-15/lib
+        export BINDGEN_EXTRA_CLANG_ARGS="-I/usr/lib/llvm-15/include"
+        
+        # Попытка компиляции с отладочной информацией
+        echo "Starting compilation with system LLVM..."
+        make -j$(nproc) V=s 2>&1 | tee compile.log || {
+          echo "First attempt failed, trying single-threaded build..."
+          make -j1 V=s 2>&1 | tee -a compile.log
+        }
+        
+        # Проверяем на специфические ошибки Rust/LLVM
+        if grep -q "failed to download llvm from ci" compile.log; then
+          echo "CI LLVM download failed, this should be handled by our config"
+          exit 1
+        fi
+        
+        echo "Build status: $?"
 
-    - name: Check the result and try again
+    # РЕШЕНИЕ 5: Резервная стратегия - исключение Rust из сборки
+    - name: Fallback - Retry without Rust packages
       if: steps.compile.outcome == 'failure'
       run: |
         cd project/friendlywrt
-        make -j1 V=s
+        
+        echo "Build failed, trying without Rust-dependent packages..."
+        
+        # Отключаем пакеты, зависящие от Rust
+        sed -i 's/CONFIG_PACKAGE_.*rust.*=y/# CONFIG_PACKAGE_.*rust.*=y/g' .config 2>/dev/null || true
+        make defconfig
+        
+        # Повторная попытка
+        make -j$(nproc) V=s 2>&1 | tee fallback_compile.log || make -j1 V=s 2>&1 | tee -a fallback_compile.log
 
     - name: Create rootfs package
       id: create_rootfs_package
@@ -126,7 +244,17 @@ jobs:
         rootfs_filename="rootfs-friendlywrt-${{ matrix.VERSION }}.tgz"
         tar cvzf ../artifact/${rootfs_filename} ${FRIENDLYWRT_SRC}/${FRIENDLYWRT_ROOTFS} \
               ${FRIENDLYWRT_SRC}/${FRIENDLYWRT_PACKAGE_DIR}
-        echo "##[set-output name=rootfs_filename;]$rootfs_filename"
+        echo "rootfs_filename=$rootfs_filename" >> $GITHUB_OUTPUT
+
+    - name: Upload build logs (for debugging)
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: build-logs
+        path: |
+          project/friendlywrt/compile.log
+          project/friendlywrt/fallback_compile.log
+        retention-days: 7
 
     - name: Upload rootfs package
       uses: svenstaro/upload-release-action@v2
